--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "browserify-fs",
+  "name": "@zeekay/browserify-fs",
   "version": "1.0.0",
   "description": "fs for the browser using level-filesystem and browserify",
-  "repository": "mafintosh/browserify-fs",
+  "repository": "zeekay/browserify-fs",
   "keywords": [
     "browserify",
     "fs",
